--- a/index.html
+++ b/index.html
@@ -26,143 +26,82 @@
     height: 100dvh; width: 100vw;
     display: flex; flex-direction: column;
     overflow: hidden; 
-    padding-top: env(safe-area-inset-top);
-    padding-left: env(safe-area-inset-left);
-    padding-right: env(safe-area-inset-right);
+    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
   }
-.header-or-logo {
-    margin-top: 10px;
-}
+
   .header {
-    height: 12%; max-height: 70px; min-height: 50px;
+    height: 50px; flex-shrink: 0;
     background: linear-gradient(to bottom, #5c0a0a, #2a0202);
     display: flex; align-items: center; justify-content: space-between;
-    padding: 0 20px; border-bottom: 2px solid var(--gold);
-    box-shadow: 0 4px 10px rgba(0,0,0,0.5); flex-shrink: 0;
+    padding: 0 15px; border-bottom: 2px solid var(--gold);
+    z-index: 100;
   }
-  
-  .logo { 
-    font-size: clamp(18px, 5dvw, 24px); 
-    font-weight: 900; color: var(--gold); text-shadow: 2px 2px 4px #000; 
-  }
-
-  .balance-display { 
-    background: rgba(0,0,0,0.6); padding: 5px 15px; border-radius: 20px;
-    border: 1px solid var(--gold); font-size: 18px; color: var(--gold); font-weight: bold;
-    cursor: pointer; /* 點擊餘額看排名 */
-  }
+  .logo { font-size: 18px; font-weight: 900; color: var(--gold); }
+  .balance-display { background: rgba(0,0,0,0.6); padding: 4px 12px; border-radius: 20px; border: 1px solid var(--gold); font-size: 15px; color: var(--gold); font-weight: bold; cursor: pointer; }
 
   .container {
-    flex: 1; 
-    display: flex; flex-direction: column;
-    justify-content: space-evenly; 
-    align-items: center;
-    padding: 10px; width: 100%; max-width: 1000px; margin: 0 auto;
+    flex: 1; display: flex; flex-direction: column;
+    padding: 10px; width: 100%; max-width: 800px; margin: 0 auto;
+    overflow: hidden;
   }
 
-  .welcome-msg { font-size: 16px; color: #ccc; flex-shrink: 0; }
+  .welcome-msg { font-size: 14px; color: #ccc; text-align: center; margin-bottom: 8px; }
 
- .game-grid {
-    display: grid;
-    /* 將 minmax 從 80px 改為 100px，避免寬螢幕時格子縮太小 */
-    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); 
-    gap: 15px; 
-    width: 100%;
-    margin-bottom: 20px;
-}
+  .game-grid {
+    flex: 1; display: grid;
+    grid-template-columns: repeat(3, 1fr); gap: 10px; 
+    align-content: start; overflow-y: auto; padding-bottom: 10px;
+  }
 
   .game-card {
-    background: var(--card-bg); 
-    border: 2px solid #444; 
-    border-radius: 12px;
-    overflow: hidden; 
-    cursor: pointer; 
-    transition: transform 0.2s;
-    display: flex; 
-    flex-direction: column; 
-    text-decoration: none; 
-    color: inherit;
-    /* 移除 aspect-ratio: 1/1; 讓內容決定高度，或者改用 min-height */
-    min-height: 120px; 
-}
-  .game-card:active { transform: scale(0.95); border-color: var(--gold); }
-  
-  .game-img { 
-    height: 70px; /* 給予固定高度或比例 */
-    display: flex; 
-    align-items: center; 
-    justify-content: center;
-    font-size: clamp(30px, 8dvw, 45px); 
-    border-bottom: 1px solid #444;
-}
-
-/* 4. 確保文字資訊始終可見 */
-.game-info { 
-    padding: 8px 5px; 
-    text-align: center; 
-    background: rgba(0,0,0,0.3); /* 稍微加深背景讓文字更清楚 */
-}
-  .game-title { font-size: 16px; font-weight: bold; color: var(--gold); }
-  .game-desc { font-size: 12px; color: #aaa; display: block; }
-
-  .deposit-area {
-    width: 100%; max-width: 400px; flex-shrink: 0;
-    display: flex; gap: 10px; /* 增加一個排行榜按鈕空間 */
-  }
-  .btn-deposit {
-    flex: 2; padding: 12px; border-radius: 50px; border: 2px solid var(--gold);
-    background: linear-gradient(#ff4757, #b91c1c); color: #fff;
-    font-size: 20px; font-weight: 900; cursor: pointer;
-    box-shadow: 0 4px 15px rgba(255, 71, 87, 0.4);
-  }
-  .btn-rank {
-    flex: 1; padding: 12px; border-radius: 50px; border: 2px solid var(--gold);
-    background: linear-gradient(#f59e0b, #92400e); color: #fff;
-    font-size: 16px; font-weight: 900; cursor: pointer;
-  }
-
-  .footer { 
-    text-align: center; padding-bottom: env(safe-area-inset-bottom); 
-    font-size: 10px; color: #555; flex-shrink: 0;
-  }
-
-  .modal {
-    position: fixed; top:0; left:0; width:100%; height:100%;
-    background: rgba(0,0,0,0.9); display: none; align-items: center; justify-content: center; z-index: 1000;
-  }
-  .modal-content {
-    background: #1a1a1a; border: 2px solid var(--gold); padding: 25px; border-radius: 20px;
-    width: 85%; max-width: 320px; text-align: center;
-  }
-  .modal-btn {
-    display: block; width: 100%; padding: 12px; margin: 10px 0; border-radius: 10px;
-    border: none; font-size: 18px; font-weight: bold; cursor: pointer; color: #fff;
+    background: var(--card-bg); border: 1px solid #444; border-radius: 12px;
+    display: flex; flex-direction: column; text-decoration: none; color: inherit;
+    min-height: 85px; transition: transform 0.1s;
   }
   
-  #nameModal { z-index: 2000; }
-  #nicknameInput {
-    width: 100%; padding: 12px; border-radius: 10px; border: none;
-    font-size: 18px; margin: 20px 0; text-align: center;
+  .game-img { flex: 1; display: flex; align-items: center; justify-content: center; font-size: 28px; }
+  .game-info { height: 28px; display: flex; align-items: center; justify-content: center; background: rgba(0,0,0,0.4); border-radius: 0 0 12px 12px; }
+  .game-title { font-size: 12px; color: var(--gold); font-weight: bold; }
+
+  .deposit-area { width: 100%; display: flex; gap: 10px; flex-shrink: 0; padding: 10px 0; }
+  .btn-deposit { flex: 2; padding: 12px; border-radius: 12px; border: 2px solid var(--gold); background: linear-gradient(#ff4757, #b91c1c); color: #fff; font-size: 18px; font-weight: 900; }
+  .btn-rank { flex: 1; padding: 12px; border-radius: 12px; border: 2px solid var(--gold); background: linear-gradient(#f59e0b, #92400e); color: #fff; font-size: 15px; font-weight: 900; }
+
+  .footer { text-align: center; padding: 5px 0; font-size: 10px; color: #444; }
+
+  /* --- 排行榜側邊欄修正 --- */
+  #rankOverlay {
+    position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+    background: rgba(0,0,0,0.7); display: none; z-index: 2999;
   }
 
-  /* --- 排行榜側邊欄專用樣式 --- */
   #rankSidebar {
-    position: fixed; top: 0; right: -100%; width: 85%; max-width: 350px; height: 100%;
-    background: #1a0202; border-left: 2px solid var(--gold); z-index: 3000;
-    transition: 0.3s; padding: 20px; display: flex; flex-direction: column;
+    position: fixed; top: 0; right: -100%; /* 初始隱藏在右側 */
+    width: 80%; max-width: 320px; height: 100%;
+    background: #1a0202; border-left: 2px solid var(--gold);
+    z-index: 3000; transition: 0.3s ease; 
+    display: flex; flex-direction: column; padding: 20px;
   }
-  #rankSidebar.active { right: 0; }
-  .rank-header { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid var(--gold); padding-bottom: 10px; margin-bottom: 15px; }
-  .rank-list { flex: 1; overflow-y: auto; }
-  .rank-item { display: flex; align-items: center; justify-content: space-between; padding: 12px 10px; border-bottom: 1px solid rgba(255,216,107,0.1); }
-  .rank-item:nth-child(1) .rank-num { color: #ffd700; font-size: 24px; }
-  .rank-item:nth-child(2) .rank-num { color: #c0c0c0; }
-  .rank-item:nth-child(3) .rank-num { color: #cd7f32; }
-  .rank-num { width: 30px; font-weight: bold; font-size: 18px; }
-  .rank-name { flex: 1; margin-left: 10px; font-size: 16px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
-  .rank-bal { color: var(--gold); font-weight: bold; }
-  .close-rank { font-size: 30px; cursor: pointer; color: var(--gold); }
-  #rankOverlay { position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.7); display: none; z-index: 2999; }
+  #rankSidebar.active { right: 0; } /* 啟動時拉回螢幕 */
+
+  .rank-header { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid var(--gold); padding-bottom: 10px; }
+  .rank-list { flex: 1; overflow-y: auto; margin-top: 10px; }
+  .rank-item { display: flex; justify-content: space-between; padding: 12px 5px; border-bottom: 1px solid rgba(255,216,107,0.1); font-size: 14px; }
+  .rank-num { color: var(--gold); font-weight: bold; width: 25px; }
+  .rank-name { flex: 1; margin-left: 5px; }
+  .rank-bal { color: #fff; }
+  .close-rank { font-size: 30px; color: var(--gold); cursor: pointer; }
+
+  /* 橫向模式調整 */
+  @media (orientation: landscape) {
+    .game-grid { grid-template-columns: repeat(5, 1fr); }
+    .game-card { min-height: 65px; }
+    .game-img { font-size: 22px; }
+  }
+
+  .modal { position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.9); display: none; align-items: center; justify-content: center; z-index: 2000; }
+  .modal-content { background: #1a1a1a; border: 2px solid var(--gold); padding: 20px; border-radius: 20px; width: 85%; max-width: 320px; text-align: center; }
+  .modal-btn { display: block; width: 100%; padding: 12px; margin: 8px 0; border-radius: 10px; border: none; font-size: 16px; font-weight: bold; color: #fff; }
 </style>
 </head>
 <body>
