--- a/horse.html
+++ b/horse.html
@@ -135,7 +135,7 @@
 
 <div class="rank-header-area">
     <div class="rank-btn-horizontal" onclick="openRank()">
-        <span>🏆 榜首:</span>
+        <span>🏆賽馬榜首:</span>
         <div id="topWinnerName">讀取中...</div>
     </div>
 </div>
