--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
     </a>
 
-    <a href="#" class="game-card">
+    <a href="slot.html" class="game-card">
       <div class="game-img" style="background: linear-gradient(45deg, #4a0404, #2a0202);">🎰</div>
       <div class="game-info">
         <div class="game-title">(暫無)777拉霸機</div>
@@ -143,7 +143,7 @@
         <div class="game-title">寶石礦坑</div>
       </div>
     </a>
-    <a href="#" class="game-card">
+    <a href="link.html" class="game-card">
       <div class="game-img" style="background: linear-gradient(45deg, #0f3fc4, #12e7f6);">🐲</div>
       <div class="game-info">
         <div class="game-title">(暫無)消消樂</div>
@@ -161,7 +161,7 @@
         <div class="game-title">愛心</div>
       </div>
     </a>
-    <a href="#" class="game-card">
+    <a href="foodlink.html" class="game-card">
       <div class="game-img" style="background: linear-gradient(45deg, #f1c1c1, #56f19e);">🍰</div>
       <div class="game-info">
         <div class="game-title">(暫無)連連看</div>
