--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <a href="slot.html" class="game-card">
       <div class="game-img" style="background: linear-gradient(45deg, #4a0404, #2a0202);">🎰</div>
       <div class="game-info">
-        <div class="game-title">(暫無)777拉霸機</div>
+        <div class="game-title">777拉霸機</div>
       </div>
     </a>
     <a href="horse.html" class="game-card">
@@ -146,7 +146,7 @@
     <a href="link.html" class="game-card">
       <div class="game-img" style="background: linear-gradient(45deg, #0f3fc4, #12e7f6);">🐲</div>
       <div class="game-info">
-        <div class="game-title">(暫無)消消樂</div>
+        <div class="game-title">消消樂</div>
       </div>
     </a>
     <a href="mahj.html" class="game-card">
@@ -164,7 +164,7 @@
     <a href="foodlink.html" class="game-card">
       <div class="game-img" style="background: linear-gradient(45deg, #f1c1c1, #56f19e);">🍰</div>
       <div class="game-info">
-        <div class="game-title">(暫無)連連看</div>
+        <div class="game-title">連連看</div>
       </div>
     </a>
     <a href="#" class="game-card">
