--- a/link.html
+++ b/link.html
@@ -159,7 +159,7 @@
     <button class="btn-action" style="background: #444; border-color: #777; font-size:14px; margin-top:5px;" onclick="shuffleGrid()">🔄 隨機洗牌</button>
 
     <div class="leaderboard">
-        <div style="color:var(--gold); font-size:12px; text-align:center;">🏆 最高紀錄</div>
+        <div style="color:var(--gold); font-size:12px; text-align:center;">🏆個人紀錄</div>
         <div class="rank-item" style="color:#0f0"><span>單局</span><span id="highScoreText">$0</span></div>
     </div>
   </div>
