--- a/heart.html
+++ b/heart.html
@@ -337,6 +337,7 @@
         <div class="audio-ctrl" onclick="cycleBGM()" id="bgmBtn">🎵 音樂1</div>
         <div class="balance-box">💎 <span id="balanceText">0</span></div>
         <button onclick="showRank()" style="background:#ccac00; border:none; border-radius:12px; padding:3px 8px; color:#000; font-size:11px; font-weight:bold;">🏆 排行</button>
+        <marquee style="flex:1; color:var(--gold); font-size: 12px;">有問題找阿記</marquee>
         <a href="index.html" style="text-decoration:none;">
             <button style="background:none; border:1px solid #777; color:#ccc; border-radius:5px; padding:5px 12px; font-size:14px; font-weight:bold;">🏠 回大廳</button>
         </a>
