--- a/foodlink.html
+++ b/foodlink.html
@@ -355,8 +355,9 @@
             appId: "1:636332967920:web:29e5600daf4db0ab613f35",
             measurementId: "G-MJZ4PGEHSQ"
         };
-
-
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+        
         const ROWS = 6, COLS = 10;
         const DESSERTS = ['🍓', '🍎', '🍰', '🍇', '🍬', '🍭', '🍩', '🍮', '🍯', '🍪', '🧁', '🍒'];
         let boardData = [], firstSelect = null, score = 0, tilesLeft = 0;
