--- a/horse.html
+++ b/horse.html
@@ -130,7 +130,7 @@
   <div class="sound-btn" onclick="cycleBGM()" id="bgmBtn">🎵 音樂 1</div>
   <div class="balance-box">💎 <span id="balanceText">0</span></div>
   <marquee style="flex:1; color:var(--gold); font-size: 12px;">有問題再說</marquee>
-  <a href="index.html" style="text-decoration:none;"><button class="sound-btn">🏠 大廳</button></a>
+  <a href="index.html" style="text-decoration:none;"><button class="sound-btn">🏠 回大廳</button></a>
 </div>
 
 <div class="rank-header-area">
@@ -186,7 +186,9 @@ const firebaseConfig = {
     appId: "1:636332967920:web:29e5600daf4db0ab613f35",
     measurementId: "G-MJZ4PGEHSQ"
 };
-firebase.initializeApp(firebaseConfig);
+if (!firebase.apps.length) {
+    firebase.initializeApp(firebaseConfig);
+}
 const db = firebase.firestore();
 
 // --- 核心變數 ---
