--- a/mahj.html
+++ b/mahj.html
@@ -376,33 +376,54 @@ function countTiles() {
 function getRandomTile(r, c) {
     const isFree = freeSpins > 0 || document.getElementById('mainBody').classList.contains('in-free');
     
-    // 1. 特殊牌處理 (元寶與胡不計入 4 張限制)
+    // 1. 特殊牌處理 (元寶與胡)
     if (Math.random() < 0.04) return '元寶'; 
     if (!isFree && Math.random() > 0.985) return '胡';
 
-    // 2. 準備候選名單
+    // 2. 取得當前盤面計數與 Wild 名單
+    const currentCounts = countTiles(); 
     const wildCandidates = ['⬜', '🀄', '🀅'];
-    const currentCounts = countTiles(); // 取得當前盤面計數
 
-    // 3. 過濾掉已經出現 4 次的牌
+    // 3. *** 動態機率控制 ***
+    let wildChance = 0.55;
+
+    if (combo >= 10) {
+        // 連擊 10 次以上：極限機率，僅剩 0.5% (千分之五)
+        // 這會讓連擊極難延續，但理論上仍有可能
+        wildChance = 0.02; 
+    } else if (combo >= 7) {
+        // 連擊 7-9 次：低機率 (1.5%)
+        wildChance = 0.06;
+    } else {
+        // 正常衰減：使用 0.6 次方，5連擊時約 4.3%
+        wildChance = wildChance * Math.pow(0.8, combo);
+    }
+
+    // 前兩行機率額外減半 (防止最容易觸發連線的位置產出 Wild)
+    if (c !== undefined && c < 2) wildChance *= 0.5;
+
+    // 4. 準備候選清單 (過濾已達 4 張的牌)
     let availableIcons = baseIcons.filter(icon => (currentCounts[icon] || 0) < 4);
-    
-    // 如果所有牌都滿了 (極端情況)，強制清空計數以防當機
     if (availableIcons.length === 0) availableIcons = baseIcons;
 
-    // 4. 決定要產出 Wild 還是普通牌 (且該牌必須在可用名單內)
-    let wildChance = 0.55 * Math.pow(0.8, combo); 
-    if (c !== undefined && c < 2) wildChance *= 0.4;
+    // 定義純雜牌 (不含白板、中、發)
+    const pureJunkTiles = availableIcons.filter(icon => !wildCandidates.includes(icon));
 
+    // 5. 決定最終產出的牌
     if (Math.random() < wildChance) {
-        // 從可用的 Wild 候選中選取
+        // 幸運抽中 Wild
         let availableWilds = wildCandidates.filter(w => availableIcons.includes(w));
         if (availableWilds.length > 0) {
             return availableWilds[Math.floor(Math.random() * availableWilds.length)];
         }
     }
 
-    // 從所有可用的牌中選取一朵
+    // 未抽中機率：強制從普通雜牌中抽取，確保不會「意外」掉落 Wild
+    if (pureJunkTiles.length > 0) {
+        return pureJunkTiles[Math.floor(Math.random() * pureJunkTiles.length)];
+    }
+
+    // 保底：若普通牌也滿了，才隨便給一張
     return availableIcons[Math.floor(Math.random() * availableIcons.length)];
 }
 
